[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying5.png" type="Texture" id=2]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying7.png" type="Texture" id=3]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/explosion_air-strip6.png" type="Texture" id=5]
[ext_resource path="res://Sounds/Undertale Sound Effect - Attack Hit (128 kbps).mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying8.png" type="Texture" id=8]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Background/Sideview Sci-Fi - Patreon Collection/Sprites/alien-flying-enemy/sprites/alien-enemy-flying6.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Aguia2.gd" type="Script" id=11]
[ext_resource path="res://Assets/LifeBars/Horizontal/Bars/Bar2.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 40, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 40, 41 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 40, 41 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), null ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.25, 13 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.25, 13.5 )

[node name="Aguia2" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 0.929412, 0.929412, 1 )
frames = SubResource( 1 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -1, 8 )
shape = SubResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -18.0
margin_right = 391.0
margin_bottom = 32.0
rect_scale = Vector2( 0.05, 0.07 )
value = 100.0
texture_progress = ExtResource( 14 )

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -16.0
pitch_scale = 1.26

[node name="Fireball1" type="Position2D" parent="."]
position = Vector2( -10, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
